# ontio-wasm-build

./: .rustfmt.toml  .travis.build.sh  .travis.yml  Cargo.toml  LICENSE  README.md  README_CN.md
src/: build.rs  constants.rs  lib.rs  main.rs  test.rs
