[package]
name = "ontio-wasm-build"
version = "0.1.2"
authors = ["laizy <aochyi@126.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ontio-wasm-build"

[lib]
crate-type = ["lib"]

[dependencies]
clap = "2.33.0"
parity-wasm = "0.41"
anyhow = "1.0"
pwasm-utils = "0.12.0"
wasmi = "0.6.2"
hex = "0.4.0"
wasmprinter = "0.2.3"
wat = "1.0.14"

